fix collection models
